# auto_poc_doc

./: README.md  calc.side  pyproject.toml
examples/: diagram_config.yaml  generated_diagram.yaml  generated_resources.yaml  meeting_notes.txt  resources_config.yaml  sow_config.yaml
src/aws_project_planning/: __init__.py
src/aws_project_planning/api/: main.py
src/aws_project_planning/cli/: main.py
src/aws_project_planning/core/bedrock/: service.py
src/aws_project_planning/core/diagram/: service.py
src/aws_project_planning/core/pricing/: browser_calculator.py  calculator.py  selenium_calculator.py  service.py  web_calculator.py
src/aws_project_planning/core/sow/: service.py  sow_generator.py  template_manager.py
templates/sow/: NMD.docx  NMD.yaml  standard.j2  standard.yaml
tests/unit/: test_api.py  test_aws_price_calculator.py  test_bedrock_service.py  test_cli.py  test_diagram_service.py  test_pricing_service.py  test_sow_generator.py  test_sow_service.py  test_web_calculator.py
